--- a/index.html
+++ b/index.html
@@ -5,82 +5,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <title>HTML & CSS: Curso práctico avanzado</title>
 </head>
-<div class="book-info-layout">
-    <section class="book-details">
-        <h2>Datos del libro</h2>
-        <ul>
-            <li><strong>Título:</strong> HTML & CSS: Curso práctico avanzado</li>
-            <li><strong>Autor:</strong> Sergio Luján Mora</li>
-            <li><strong>Editorial:</strong> Publicaciones Altaria</li>
-            <li><strong>Año de publicación:</strong> 2015</li>
-            <li><strong>ISBN:</strong> 978-84-944049-4-8</li>
-        </ul>
-    </section>
-</div>
-<section class="book-description">
-    <h2>Descripción del libro</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type
-        specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged. It was popularised in the
-        1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-        recently with desktop publishing software like Aldus PageMaker including versions of
-        Lorem Ipsum.</p>
-    <p>Aliquam nec luctus nibh, vitae viverra enim. Nam volutpat, massa nec aliquet vulputate,
-        turpis ante semper augue, ac lobortis ligula erat at risus. Pellentesque consequat nec
-        urna non tincidunt. Praesent tempus, nunc eu pretium commodo, lacus leo luctus magna, a
-        ornare turpis nisi at tellus. Suspendisse efficitur ligula vitae sapien tempor, a finibus
-        mauris consectetur. Integer nec enim eget elit interdum pulvinar. Nunc egestas, mauris
-        ultrices volutpat dignissim, arcu orci maximus dolor, et eleifend quam lorem in erat.
-        Suspendisse eget elementum leo. Aliquam fermentum orci et eros feugiat porta. </p>
 
-    <p>Nunc aliquet ex ligula, blandit rutrum quam mattis id. Proin varius, nulla et sollicitudin
-        tempor, neque felis fringilla quam, eu consectetur massa ante eu sem. Pellentesque in lobortis
-        neque. Vivamus vehicula lacus eu rutrum finibus. Pellentesque habitant morbi tristique
-        senectus et netus et malesuada fames ac turpis egestas. Vestibulum sapien arcu, congue
-        ut dui et, molestie commodo justo. Pellentesque pretium mauris in ex sagittis, eu tincidunt
-        orci tincidunt. Curabitur faucibus ante et dui congue finibus. Ut sodales velit sem, quis
-        dignissim diam blandit nec. Proin placerat dapibus elit at aliquet.</p>
-</section>
+<body>
+    <h1 class="page-title">HTML & CSS: Curso práctico avanzado</h1>
 
-<section class="book-content">
-    <h2>Contenido del libro</h2>
-
-    <p class="intro-paragraph">
-        Nulla accumsan, nibh vitae aliquam posuere, lectus lectus facilisis ante, vitae aliquam turpis risus et enim
-    </p>
-
-    <div class="parallel-paragraphs">
-        <div class="left-paragraph">
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+    <div class="buttons-container">
+        <button id="btnOrdenar">Ordenar columnas como filas</button>
+        <div class="title-changer">
+            <input type="text" id="newTitle" placeholder="Nuevo título">
+            <button id="btnCambiarTitulo">Cambiar título</button>
         </div>
-        <div class="right-paragraph">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor placerat urna non porttitor.
-                Donec eu cursus nunc, facilisis iaculis libero. Donec quis vulputate turpis. Vestibulum ante ipsum
-                primis
-                in faucibus orci luctus et ultrices posuere cubilia curae; Sed scelerisque nisl at lectus lacinia, vitae
-                congue magna vestibulum. Curabitur sit amet nisl finibus, semper ipsum a, viverra justo. Pellentesque
-                vehicula
-                at ante eget tempor. Morbi ut mi lorem. Nullam eget vulputate massa. Aliquam eget neque sit amet nunc
-                vehicula
-                pretium non at metus. Duis gravida elit urna. </p>
-            <p>Donec elementum, arcu vel iaculis maximus, arcu neque porttitor ante, at finibus mauris lacus ac nisi.
-                Vivamus
-                ac purus hendrerit risus cursus imperdiet eu non nibh. Donec sapien ante, sodales vel dolor quis,
-                consectetur
-                venenatis metus. Phasellus placerat erat eros, sit amet lobortis mi convallis ut. Curabitur tristique.
-            </p>
+        <button id="btnCambiarColor">Cambiar color subtítulo</button>
+        <div class="image-menu-wrapper">
+            <button id="btnAgregarImagen">Agregar imagen</button>
+            <div class="image-options" id="imageOptions">
+                <button id="btnSubir">Desde mi compu</button>
+                <button id="btnAleatoria">Imagen aleatoria</button>
+            </div>
         </div>
     </div>
-</section>
 
-</div>
+    <div class="layout-wrapper">
+        <section class="book-details">
+            <h2>Datos del libro</h2>
+            <ul>
+                <li><strong>Título:</strong> HTML & CSS: Curso práctico avanzado</li>
+                <li><strong>Autor:</strong> Sergio Luján Mora</li>
+                <li><strong>Editorial:</strong> Publicaciones Altaria</li>
+                <li><strong>Año de publicación:</strong> 2015</li>
+                <li><strong>ISBN:</strong> 978-84-944049-4-8</li>
+            </ul>
+            <div id="image-container" class="image-container"></div>
+        </section>
 
-<script src="script.js"></script>
+        <div class="main-content">
+            <section class="book-description">
+                <h2 id="subtitle-description">Descripción del libro</h2>
+                <p class="description-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type
+                    specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the
+                    1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                    recently with desktop publishing software like Aldus PageMaker including versions of
+                    Lorem Ipsum.</p>
+                <p class="description-text">Aliquam nec luctus nibh, vitae viverra enim. Nam volutpat, massa nec aliquet
+                    vulputate,
+                    turpis ante semper augue, ac lobortis ligula erat at risus. Pellentesque consequat nec
+                    urna non tincidunt. Praesent tempus, nunc eu pretium commodo, lacus leo luctus magna, a
+                    ornare turpis nisi at tellus. Suspendisse efficitur ligula vitae sapien tempor, a finibus
+                    mauris consectetur.</p>
+
+                <p class="description-text">Nunc aliquet ex ligula, blandit rutrum quam mattis id. Proin varius, nulla
+                    et sollicitudin
+                    tempor, neque felis fringilla quam, eu consectetur massa ante eu sem. Pellentesque in lobortis
+                    neque. Vivamus vehicula lacus eu rutrum finibus. Pellentesque habitant morbi tristique
+                    senectus et netus et malesuada fames ac turpis egestas.</p>
+                <h2>Contenido del libro</h2>
+
+                <p class="intro-paragraph">
+                    Nulla accumsan, nibh vitae aliquam posuere, lectus lectus facilisis ante, vitae aliquam turpis risus
+                    et enim
+                </p>
+
+                <div class="parallel-paragraphs">
+                    <div class="left-paragraph">
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                            classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                            Latin
+                            professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin
+                            words,
+                            consectetur, from a Lorem Ipsum passage, and going through the cites of the word in
+                            classical literature,
+                            discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of
+                            "de Finibus
+                            Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book
+                            is a treatise
+                            on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
+                            "Lorem ipsum
+                            dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                    <div class="right-paragraph">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor placerat urna non
+                            porttitor.
+                            Donec eu cursus nunc, facilisis iaculis libero. Donec quis vulputate turpis. Vestibulum ante
+                            ipsum
+                            primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed scelerisque nisl at
+                            lectus lacinia, vitae
+                            congue magna vestibulum. Curabitur sit amet nisl finibus, semper ipsum a, viverra justo.
+                            Pellentesque
+                            vehicula at ante eget tempor. Morbi ut mi lorem. Nullam eget vulputate massa. Aliquam eget
+                            neque sit amet nunc
+                            vehicula pretium non at metus. Duis gravida elit urna. </p>
+                        <p>Donec elementum, arcu vel iaculis maximus, arcu neque porttitor ante, at finibus mauris lacus
+                            ac nisi.
+                            Vivamus ac purus hendrerit risus cursus imperdiet eu non nibh. Donec sapien ante, sodales
+                            vel dolor quis,
+                            consectetur venenatis metus. Phasellus placerat erat eros, sit amet lobortis mi convallis
+                            ut. Curabitur tristique.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
